comtrade_script_download_reports/scron_download_error.txt
Traceback (most recent call last):
  File "<string>", line 1, in <module>
  File "/n/holystore01/LABS/hausmann_lab/lab/atlas/comtrade_download/downloader.py", line 464
    dfs.append(df)
    ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/n/hausmann_lab/lab/atlas/comtrade_download/download_latest.py", line 3, in <module>
    from downloader import ComtradeDownloader, API_KEYS
  File "/n/holystore01/LABS/hausmann_lab/lab/atlas/comtrade_download/downloader.py", line 464
    dfs.append(df)
    ^
SyntaxError: invalid syntax
